--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -6,8 +6,8 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #006494 ;
-  --secondary-color: #247BA0 ;
+  --primary-color: #0DAB76 ;
+  --secondary-color: #162521 ;
   --accent1-color: #ADFCF9;
   --accent2-color: #1B98E0;
 
@@ -16,9 +16,9 @@ Fonts are separated by a & */
   --paragraph-font: Inter, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #006494;  /* headlines on a white background */ 
+  --headline-color-on-white: #0DAB76;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #247BA0; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: #162521; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
   --paragraph-background-color: #396E94  ;
   --nav-link-color: #1B98E0;
