--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -12,8 +12,8 @@ Fonts are separated by a & */
   --accent2-color: #1B98E0;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Archivo Black";
-  --paragraph-font: Inter, Helvetica, sans-serif;
+  --heading-font: Verdana;
+  --paragraph-font: Georgia, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #0DAB76;  /* headlines on a white background */ 
