--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -11,6 +11,8 @@ body {
 header {
     background-color:#0DAB76;
     font-family: Georgia, Helvetica, sans-serif;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 
 .logo {
@@ -19,11 +21,18 @@ header {
 
 #logo_link{
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 .icon {
     width :80px;
     padding-top: 10px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 
 nav a {
@@ -72,6 +81,9 @@ h4 {
     background-color:#0DAB76;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #0DAB76;
 }
 
 .msg h2 {
@@ -85,8 +97,28 @@ h4 {
     padding-bottom: 15px;
 }
 
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
 #hero-msg h1 {
     text-align: center;
+    grid-column: 2/4;
+    grid-row: 1/3;
 }
 
 #hero-img {
@@ -95,6 +127,8 @@ h4 {
 
 #hero-msg h4 {
     text-align: center;
+    grid-column: 2/4;
+    grid-row: 1/3;
 }
 
 .button-box {
@@ -111,14 +145,51 @@ main section img {
 
 #background {
     height: 725px;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
+
+.home-grid {
+    display: grid;
+    grid-template-columns: 1f 1f 1f 1f 1f 1f 1f 1f 1f 1f;
+}
+
 
 .card-img {
     border: 10px solid #0DAB76;
+    width: 100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #0DAB76;
 }
 
-.rivers-card, .camping-card, .rapids-card {
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #0DAB76;
+}
+
+.rivers-card {
     margin: 200px 0;
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    margin: 200px 0;
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card{
+    margin: 200px 0;
+    grid-column: 8/10;
+    grid-row: 2/3;
 }
 
 footer {
@@ -126,6 +197,9 @@ footer {
     color: #162521;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer a {
@@ -147,4 +221,46 @@ footer p a:hover {
 
 footer .social img {
     padding-top:15px;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
