Added page 2 wireframe.

--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -27,6 +27,10 @@ Fonts are separated by a & */
   --nav-hover-background-color: #1B98E0;
 }
 
+.faq-wireframe {
+  width: 300px;
+}
+
 
 /*  Look around below...but DON'T CHANGE ANYTHING! */
 
