Added css (minus images)

--- a/smtpersonalsite/styles/site-plan-personal.css
+++ b/smtpersonalsite/styles/site-plan-personal.css
@@ -22,7 +22,7 @@ Fonts are separated by a | */
   --paragraph-background-color: #0C60D4  ;
   --nav-link-color: #FFFBFE;
   --nav-background-color: #C81927;
-  --nav-hover-link-color: #FFFBFE;
+  --nav-hover-link-color: #01BAEF;
   --nav-hover-background-color: #0C60D4;
 }
 
